test: add more host function tests, cleanup tests to use `wasm/code.wasm` when possible (#219)

--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Test Go Host SDK
         run: |
           go version
-          cd go
-          LD_LIBRARY_PATH=/usr/local/lib go run main.go
           LD_LIBRARY_PATH=/usr/local/lib go test
+          cd go
+          LD_LIBRARY_PATH=/usr/local/lib go run main.go | grep "Hello from Go!"
