fix(rust): use CString for strings passed to to set_log_file (#341)

--- a/.github/workflows/ci-rust.yml
+++ b/.github/workflows/ci-rust.yml
@@ -87,6 +87,7 @@ jobs:
         run: cargo clippy --release --all-features --no-deps -p ${{ env.RUNTIME_CRATE }}
       - name: Test
         run: cargo test --all-features --release -p ${{ env.RUNTIME_CRATE }}
+        run: cat test.log
 
   rust:
     name: Rust
