refactor!: Remove context, unify `extism-runtime` and `extism` crates (#421)
- Removes the `ExtismContext` type from runtime and all SDKs
- Removed SDK functions: `extism_context_new`, `extism_context_reset`,
`extism_context_free`
  - All SDKs have been updated, but there are still some TODOs below 
- Removes `extism_plugin_update`
- Plugins can no longer be updated - a new plugin should be created
instead
- Adds `extism_plugin_id` to uniquely identify plugins
- Merges the `extism-runtime` and `extism` crates (there is no longer an
`extism-runtime` crate)
- Makes `extism::Manifest` an alias for `extism_manifest::Manifest`
instead of a distinct type
- Adds `MemoryHandle` type to SDKs to refer to blocks of Extism memory
that can be accessed in host functions
- Improves thread-safety of Plugins, adds C++ test to call a single
plugin from multiple threads.
- Expands wasmtime bounds to include 12.0

--- a/.github/workflows/ci-rust.yml
+++ b/.github/workflows/ci-rust.yml
@@ -12,9 +12,8 @@ on:
 name: Rust CI
 
 env:
-  RUNTIME_CRATE: extism-runtime
+  RUNTIME_CRATE: extism
   LIBEXTISM_CRATE: libextism
-  RUST_SDK_CRATE: extism
 
 jobs:
   lib:
@@ -86,20 +85,9 @@ jobs:
       - name: Lint
         run: cargo clippy --release --all-features --no-deps -p ${{ env.RUNTIME_CRATE }}
       - name: Test
+        run: cargo test --release -p ${{ env.RUNTIME_CRATE }}
+      - name: Test all features
         run: cargo test --all-features --release -p ${{ env.RUNTIME_CRATE }}
+      - name: Test no features
+        run: cargo test --no-default-features --release -p ${{ env.RUNTIME_CRATE }}
 
-  rust:
-    name: Rust
-    needs: lib
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        rust:
-          - stable
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v3
-      - uses: ./.github/actions/extism
-      - name: Test Rust Host SDK
-        run: LD_LIBRARY_PATH=/usr/local/lib cargo test --release -p ${{ env.RUST_SDK_CRATE }}
