--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,5 @@
 on: 
   pull_request:
-    paths:
-      - .github/actions/extism/**
-      - .github/workflows/ci-dotnet.yml
-      - manifest/**
-      - runtime/**
-      - libextism/**
-      - dotnet/**
   workflow_dispatch:
 
 name: .NET CI
@@ -17,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         rust:
           - stable
     steps:
@@ -30,5 +23,4 @@ jobs:
            dotnet-version: 7.x
       - name: Test .NET Sdk
         run: |
-          cd dotnet
-          LD_LIBRARY_PATH=/usr/local/lib dotnet test ./Extism.sln
+          make test
