--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
         uses: actions/checkout@v3
 
 # Install libextism
+## linux
       - name: release-downloader
+        if: runner.os == 'Linux'
         uses: robinraju/release-downloader@v1.8
         with:
           repository: 'extism/extism'
@@ -34,6 +36,23 @@ jobs:
         run: |
           sudo mv native/extism.h /usr/local/include/
           sudo mv native/libextism.so  /usr/local/lib/
+
+## macOS
+      - name: release-downloader
+        if: runner.os == 'macOS'
+        uses: robinraju/release-downloader@v1.8
+        with:
+          repository: 'extism/extism'
+          tag: latest
+          fileName: 'libextism-x86_64-apple-darwin-main.tar.gz'
+          out-file-path: 'native'
+          extract: true
+
+      - name: Move the files because download can't sudo
+        if: runner.os == 'macOS'
+        run: |
+          sudo mv native/extism.h /usr/local/include/
+          sudo mv native/libextism.dylib  /usr/local/lib/
 
 # Setup .NET and run tests
       - name: Setup .NET Core SDK
