--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,11 +72,17 @@ jobs:
 
 # Setup .NET and run tests
       - name: Setup .NET Core SDK
-        if: false
         uses: actions/setup-dotnet@v3.0.3
         with:
            dotnet-version: 7.x
+
       - name: Test .NET Sdk
-        if: false
+        if: runner.os == 'Windows'
+        run: |
+          make build
+          Get-ChildItem -Recurse test/Extism.Sdk/bin/Debug/net7.0
+          rm test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/Extism.dll
+
+      - name: Test .NET Sdk
         run: |
           make test
