--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,13 +76,13 @@ jobs:
         with:
            dotnet-version: 7.x
 
-      - name: Test .NET Sdk
+      - name: Remove NuGet package DLL
         if: runner.os == 'Windows'
         run: |
           make prepare
-          Get-ChildItem -Recurse test/Extism.Sdk/bin/Debug/net7.0
-          rm test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/Extism.dll
+          if (test-path 'test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/extism.dll')
+            rm 'test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/extism.dll'
 
       - name: Test .NET Sdk
         run: |
-          make test
+          dotnet test --no-build
