--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,23 +65,19 @@ jobs:
           out-file-path: 'test/Extism.Sdk/bin/Debug/net7.0'
           extract: true
           
-      - name: Delete Native binary from nuget package
-        if: runner.os == 'Windows'
-        run: |
-          Get-ChildItem -Recurse test/Extism.Sdk/bin/Debug/net7.0
-
 # Setup .NET and run tests
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3.0.3
         with:
            dotnet-version: 7.x
 
-      - name: Remove NuGet package DLL
+      - name: Remove NuGet package native binary
         if: runner.os == 'Windows'
         run: |
           make prepare
-          if (test-path 'test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/extism.dll')
+          if (test-path 'test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/extism.dll') {
             rm 'test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/extism.dll'
+          }
 
       - name: Test .NET Sdk
         run: |
