--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,19 +71,7 @@ jobs:
         with:
            dotnet-version: 7.x
 
-      - name: Build the solution
-        run: |
-          make prepare
-
-      # We want to use the native binaries downloaded from GitHub releases,
-      # so we will remove the native binaries provided by the Extism.runtime.win-x64 NuGet package
-      - name: Remove NuGet package native binary
-        if: runner.os == 'Windows'
-        run: |
-          if (test-path 'test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/extism.dll') {
-            rm 'test/Extism.Sdk/bin/Debug/net7.0/runtimes/win-x64/native/extism.dll'
-          }
-
       - name: Test .NET Sdk
         run: |
-          dotnet test --no-build
+          make test
+          make test
