feat: Implement Manifest (#6)
This PR brings the .NET SDK to feature parity with the other SDKs by
implementing:

 - [x] Manifest
 - [x] WasmSource
   - [x] PathWasmSource
   - [x] UrlWasmSource
   - [x] ByteArrayWasmSource
 - [x] More automated tests
 - [x] Cancellation support
 - [x] Timeout support
 - [x] Rename `CallFunction` to `Call`
 - [x] Accept a Dictionary<string, string> in UpdateConfig

--- a/samples/Extism.Sdk.Sample/Extism.Sdk.Sample.csproj
+++ b/samples/Extism.Sdk.Sample/Extism.Sdk.Sample.csproj
@@ -9,16 +9,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\..\wasm\code.wasm" Link="code.wasm">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Include="..\..\wasm\code-functions.wasm" Link="code-functions.wasm">
+		<None Include="..\..\wasm\*.wasm">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Extism.runtime.win-x64" Version="0.7.0" />
+		<!--<PackageReference Include="Extism.runtime.win-x64" Version="0.4.0" />-->
 	</ItemGroup>
 
 	<ItemGroup>
