--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,58 +20,17 @@ jobs:
         uses: actions/checkout@v3
 
 # Install libextism
-# linux
-      - name: Download Linux binaries
-        if: runner.os == 'Linux'
-        uses: robinraju/release-downloader@v1.8
-        with:
-          repository: 'extism/extism'
-          tag: latest
-          fileName: 'libextism-x86_64-unknown-linux-gnu-main.tar.gz'
-          out-file-path: 'native'
-          extract: true
-
-      - name: Move Linux binaries to lib
-        if: runner.os == 'Linux'
-        run: |
-          sudo mkdir -p /usr/local/include/
-          sudo mv native/extism.h /usr/local/include/
-
-          sudo mkdir -p /usr/local/lib/
-          sudo mv native/libextism.so  /usr/local/lib/
-
-# macOS
-      - name: Download macOS binaries
-        if: runner.os == 'macOS'
-        uses: robinraju/release-downloader@v1.8
-        with:
-          repository: 'extism/extism'
-          tag: latest
-          fileName: 'libextism-x86_64-apple-darwin-main.tar.gz'
-          out-file-path: 'native'
-          extract: true
-
-      - name: Move macOS binaries to lib
-        if: runner.os == 'macOS'
-        run: |
-          ls -a native
-
-          sudo mkdir -p /usr/local/include/
-          sudo mv native/extism.h /usr/local/include/
-
-          sudo mkdir -p /usr/local/lib/
-          sudo mv native/libextism.dylib  /usr/local/lib/
+# linux and macOS
+     - name: Install libextism
+       uses: ./.github/actions/libextism
+       if: runner.os != 'Windows'
 
 # Windows
-      - name: Download Windows binaries
-        if: runner.os == 'Windows'
-        uses: robinraju/release-downloader@v1.8
-        with:
-          repository: 'extism/extism'
-          tag: latest
-          fileName: 'libextism-x86_64-pc-windows-msvc-main.tar.gz'
-          out-file-path: 'test/Extism.Sdk/bin/Debug/net7.0'
-          extract: true
+     - name: Install libextism
+       uses: ./.github/actions/libextism
+       with:
+        prefix: test/Extism.Sdk/bin/Debug/net7.0
+       if: runner.os != 'Windows'
           
 # Setup .NET and run tests
       - name: Setup .NET Core SDK
