--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,15 @@ jobs:
         uses: ./.github/actions/libextism
 
       # Windows
-      - name: Install libextism
+      - name: Download Windows binaries
         if: runner.os == 'Windows'
-        uses: ./.github/actions/libextism
+        uses: robinraju/release-downloader@v1.8
         with:
-          prefix: test/Extism.Sdk/bin/Debug/net7.0
+          repository: 'extism/extism'
+          tag: latest
+          fileName: 'libextism-x86_64-pc-windows-msvc-main.tar.gz'
+          out-file-path: 'test/Extism.Sdk/bin/Debug/net7.0'
+          extract: true
 
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1
