--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
-on: 
+on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 name: .NET CI
 
@@ -13,48 +15,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        rust:
-          - stable
+
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-# Install libextism
-# linux
-      - name: Download Linux binaries
-        if: runner.os == 'Linux'
-        uses: robinraju/release-downloader@v1.8
-        with:
-          repository: 'extism/extism'
-          tag: latest
-          fileName: 'libextism-x86_64-unknown-linux-gnu-main.tar.gz'
-          out-file-path: 'native'
-          extract: true
+      # macOS and Linux
+      - name: Install libextism
+        if: runner.os != 'Windows'
+        uses: ./.github/actions/libextism
 
-      - name: Move Linux binaries to lib
-        if: runner.os == 'Linux'
-        run: |
-          sudo mv native/extism.h /usr/local/include/
-          sudo mv native/libextism.so  /usr/local/lib/
-
-# macOS
-      - name: Download macOS binaries
-        if: runner.os == 'macOS'
-        uses: robinraju/release-downloader@v1.8
-        with:
-          repository: 'extism/extism'
-          tag: latest
-          fileName: 'libextism-x86_64-apple-darwin-main.tar.gz'
-          out-file-path: 'native'
-          extract: true
-
-      - name: Move macOS binaries to lib
-        if: runner.os == 'macOS'
-        run: |
-          sudo mv native/extism.h /usr/local/include/
-          sudo mv native/libextism.dylib  /usr/local/lib/
-
-# Windows
+      # Windows
       - name: Download Windows binaries
         if: runner.os == 'Windows'
         uses: robinraju/release-downloader@v1.8
@@ -64,14 +35,12 @@ jobs:
           fileName: 'libextism-x86_64-pc-windows-msvc-main.tar.gz'
           out-file-path: 'test/Extism.Sdk/bin/Debug/net7.0'
           extract: true
-          
-# Setup .NET and run tests
-      - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v3.0.3
-        with:
-           dotnet-version: 7.x
 
-      - name: Test .NET Sdk
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 7.x
+
+      - name: Run tests
         run: |
-          make test
           make test
