--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - 'v*'
 
 name: Release .NET SDK
 
@@ -10,20 +12,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install extism shared library
-        shell: bash
-        run: |
-          mkdir -p /home/runner/.local/bin/  
-          export PATH="/home/runner/.local/bin/:$PATH"
-          curl https://raw.githubusercontent.com/extism/cli/main/install.sh | sh
-          extism --sudo --prefix /usr/local install
+
+      - name: Install libextism
+        if: runner.os != 'Windows'
+        uses: ./.github/actions/libextism
+
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3.0.3
         with:
            dotnet-version: 7.x
+
       - name: Test .NET Sdk
         run: |
           make test
+
       - name: Publish .NET Sdk
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
