--- a/samples/Extism.Sdk.FSharpSample/Extism.Sdk.FSharpSample.fsproj
+++ b/samples/Extism.Sdk.FSharpSample/Extism.Sdk.FSharpSample.fsproj
@@ -10,6 +10,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Extism.runtime.win-x64" Version="1.0.0-rc0" />
 		<ProjectReference Include="..\..\src\Extism.Sdk\Extism.Sdk.csproj" />
 	</ItemGroup>
 
