--- a/samples/Extism.Sdk.Sample/Extism.Sdk.Sample.csproj
+++ b/samples/Extism.Sdk.Sample/Extism.Sdk.Sample.csproj
@@ -15,7 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!--<PackageReference Include="Extism.runtime.win-x64" Version="0.4.0" />-->
+		<PackageReference Include="Extism.runtime.win-x64" Version="1.0.0-rc0" />
 	</ItemGroup>
 
 	<ItemGroup>
