deploy: bf9c1d07afc67072151e177aab4b0dd7cc332595

--- a/manifest.json
+++ b/manifest.json
@@ -92,6 +92,16 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Extism.Sdk.LoggingSink.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Extism.Sdk.LoggingSink.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Extism.Sdk.Manifest.yml",
       "output": {
         ".html": {
@@ -204,11 +214,11 @@
       "type": "Toc",
       "source_relative_path": "api/toc.yml",
       "output": {
-        ".html": {
-          "relative_path": "api/toc.html"
-        },
         ".json": {
           "relative_path": "api/toc.json"
+        },
+        ".html": {
+          "relative_path": "api/toc.html"
         }
       },
       "version": ""
@@ -267,11 +277,11 @@
       "type": "Toc",
       "source_relative_path": "toc.yml",
       "output": {
-        ".html": {
-          "relative_path": "toc.html"
-        },
         ".json": {
           "relative_path": "toc.json"
+        },
+        ".html": {
+          "relative_path": "toc.html"
         }
       },
       "version": ""
